--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@ swanith
   <div id="footer-container"></div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <script src="/js/app.js"></script>
+  <script src="../js/app.js"></script>
 </body>
 
 </html>
